[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
notify-rust = "4"
debug_print = "1.0.0"
webbrowser = "0.6.0"
rand = "0.8.5"
